delete swagdoc
